# video_annotator

./: .gitignore  CMakeLists.txt
include/video_annotator/data/: rgbd_frames.h  skeleton_frames.h
include/video_annotator/interface/: camera.h  kinect_recorder.h  kinect_viewer.h  opengl_widget.h  point_cloud_viewer.h  video_annotator.h  viewer.h  visualizer.h
include/video_annotator/kinect/: kinect_device.h
include/video_annotator/util/: mutex.h  time.h
pro/: all.pro  common.pri
pro/annotator/: annotator.pro
pro/recorder/: recorder.pro
pro/video_annotator/: video_annotator.pro
src/: annotator.cpp  recorder.cpp  recorder_win.cpp  test_freenect.cpp  video_recorder.cpp
src/data/: rgbd_frames.cpp  skeleton_frames.cpp
src/interface/: camera.cpp  kinect_recorder.cpp  kinect_viewer.cpp  opengl_widget.cpp  point_cloud_viewer.cpp  video_annotator.cpp  viewer.cpp  visualizer.cpp
src/kinect/: kinect_device.cpp
